# BungIO

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  definitions.py  generate_api_schema.py  mkdocs.yml  pyproject.toml  readthedocs.yaml  todo.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-form.yml  issue-form.yml  question-form.yml
.github/actions/setup_python_environment/: action.yaml
.github/workflows/: black.yml  flake8.yml  pypi.yml  release.yml  ruff_formating.yml  ruff_linting.yml
bungio/: __init__.py  client.py  definitions.py  error.py  manifest.py  singleton.py  utils.py
bungio/api/: __init__.py
bungio/api/bungie/: __init__.py  app.py  community_content.py  content.py  destiny2.py  fireteam.py  forum.py  get_available_locales.py  global_alerts.py  group_v2.py  settings.py  social.py  tokens.py  trending.py  user.py  user_system_overrides.py
bungio/api/overwrites/: __init__.py  app.py  destiny2.py
bungio/client/: client.py
bungio/http/: auth.py  client.py  ratelimiting.py  route.py
bungio/http/routes/: __init__.py  app.py  community_content.py  content.py  destiny2.py  fireteam.py  forum.py  get_available_locales.py  global_alerts.py  group_v2.py  settings.py  social.py  tokens.py  trending.py  user.py  user_system_overrides.py
bungio/models/: __init__.py  auth.py  base.py
bungio/models/basic/: __init__.py  character.py  clan.py  user.py
bungio/models/bungie/: __init__.py  applications.py  components.py  config.py  content.py  dates.py  destiny.py  entities.py  exceptions.py  fireteam.py  forum.py  forums.py  groupsv2.py  ignores.py  interpolation.py  links.py  misc.py  queries.py  tokens.py  trending.py  user.py
bungio/models/bungie/common/: models.py
bungio/models/bungie/config/: __init__.py  clanbanner.py
bungio/models/bungie/content/: __init__.py  models.py
bungio/models/bungie/destiny/: __init__.py  activities.py  advanced.py  artifacts.py  challenges.py  character.py  config.py  constants.py  milestones.py  misc.py  perks.py  progression.py  quests.py  responses.py  sockets.py  vendors.py
bungio/models/bungie/social/: friends.py
bungio/models/bungie/user/: __init__.py  models.py
bungio/models/mixins/: __init__.py  character.py  clan.py  user.py
bungio/models/overwrites/: __init__.py  dates.py  fireteam.py  groupsv2.py
docs/src/: .pages  contributing.md  index.md  installation.md  license.md  why_bungio.md
docs/src/API Reference/: client.md  errors.md  utils.md
docs/src/API Reference/Bungie Interface/: app.md  community_content.md  content.md  destiny2.md  fireteam.md  fireteam_finder.md  forum.md  get_available_locales.md  global_alerts.md  group_v2.md  index.md  settings.md  social.md  tokens.md  trending.md  user.md  user_system_overrides.md
docs/src/API Reference/HTTP/: client.md  components.md  index.md
docs/src/API Reference/Models/: base.md  enums.md  index.md  manifest.md
docs/src/Examples/: .pages  auth.md  basic.md  manifest.md
docs/src/Getting Started/: installation.md  usage.md
docs/src/Guides/: .pages  auth.md  basic.md  manifest.md
docs/src/css/: extra.css
pytest/: conftest.py
pytest/endpoints/: test_app.py  test_community_content.py  test_content.py  test_destiny2.py  test_fireteam.py  test_forum.py  test_get_available_locales.py  test_global_alerts.py  test_group_v2.py  test_settings.py  test_social.py  test_tokens.py  test_trending.py  test_user.py  test_user_system_overrides.py
src/bungio/: client.py  definitions.py  error.py  manifest.py  utils.py
src/bungio/api/: client.py
src/bungio/api/bungie/: __init__.py  app.py  community_content.py  content.py  destiny2.py  fireteam.py  fireteam_finder.py  forum.py  get_available_locales.py  global_alerts.py  group_v2.py  settings.py  social.py  tokens.py  trending.py  user.py  user_system_overrides.py
src/bungio/api/overwrites/: destiny2.py
src/bungio/http/: __init__.py  auth.py  client.py
src/bungio/http/routes/: __init__.py  app.py  community_content.py  content.py  destiny2.py  fireteam_finder.py  forum.py  get_available_locales.py  group_v2.py  (+7 more)
src/bungio/models/: __init__.py  auth.py  base.py  enums.py
tests/: bot.py  conftest.py
tests/endpoints/: test_app.py  test_community_content.py  test_content.py  test_destiny2.py  test_fireteam.py  test_forum.py  test_get_available_locales.py  test_global_alerts.py  test_group_v2.py  test_settings.py  test_social.py  test_tokens.py  test_trending.py  test_user.py  test_user_system_overrides.py
(+272 files in other folders)
