[tool.poetry]
name = "bungio"
version = "0.0.0"
description = "A destiny 2 / bungie api wrapper"
keywords = ["asyncio", "destiny", "destiny 2", "bungie", "api"]
readme = "README.md"
authors = ["Daniel J"]
repository = "https://github.com/Kigstn/BungIO"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
attrs = "^21.4.0"
SQLAlchemy = {version = "^1.4.36", extras = ["aiosqlite"]}
orjson = {version = "^3.6.8", optional = true}
aiodns = {version = "^3.0.0", optional = true}
cchardet = {version = "^2.1.7", optional = true}
Brotli = {version = "^1.0.9", optional = true}
aiohttp-client-cache = {version = "^0.7.0", optional = true}
mkdocstrings = {version = "^0.18.1", extras = ["python"], optional = true}
mkdocs-material = {version = "^8.2.15", optional = true}
mkdocs-awesome-pages-plugin = {version = "^2.7.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"

[tool.poetry.extras]
speedups = ["orjson", "aiodns", "cchardet", "Brotli"]
cache = ["aiohttp-client-cache"]
docs = ["mkdocstrings", "mkdocs-material", "mkdocs-awesome-pages-plugin"]
all = ["orjson", "aiodns", "cchardet", "Brotli", "aiohttp-client-cache", "mkdocstrings", "mkdocs-material", "mkdocs-awesome-pages-plugin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
