[project]
name = "bungio"
version = "1.2.0"
description = "A destiny 2 / bungie api wrapper"
keywords = ["asyncio", "destiny", "destiny 2", "bungie", "api"]
authors = [{ name = "Daniel J" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    "aiohttp~=3.8",
    "attrs~=22.1",
    "sqlalchemy[aiosqlite]~=1.4",
]

[project.optional-dependencies]
speedups = [
    "orjson~=3.6",
    "brotli~=1.0",
    "charset-normalizer~=3.3",
]
cache = [
    "aiohttp-client-cache~=0.7",
]
docs = [
    "mkdocstrings[python]~=0.25",
    "mkdocs-material~=9.5",
    "mkdocs-awesome-pages-plugin~=2.9",
    "mkdocs-autorefs~=1.0",
]
test = [
    "pytest~=7.1",
    "pytest-asyncio~=0.18",
]
dev = [
    "ruff~=0.5",
    "pre-commit~=3.7",
]


[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
# Allow applying all unsafe fixes in the `E` rules and `F401` without the `--unsafe-fixes` flag
extend-safe-fixes = ["E", "F401"]
extend-select = ["I"]
extend-ignore = ["F403"]
exclude = ["__init__.py"]

[project.urls]
Repository = "https://github.com/Kigstn/BungIO"
Documentation = "https://bungio.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
